--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "akagi",
   "version": "0.0.0",
   "description": "core of kaga",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava test.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/egoist/akagi/issues"
   },
-  "homepage": "https://github.com/egoist/akagi#readme"
+  "homepage": "https://github.com/egoist/akagi#readme",
+  "devDependencies": {
+    "ava": "^0.4.2",
+    "babel-core": "^5.8.34",
+    "babel-runtime": "^5.8.2",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.3.0"
+  },
+  "dependencies": {
+    "mongoose": "^4.2.5"
+  }
 }
