--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "core of kaga",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "ava test.js"
+    "test": "ava ./tests/test-*.js"
   },
   "repository": {
     "type": "git",
