--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp-babel": "^5.3.0"
   },
   "dependencies": {
-    "mongoose": "^4.2.5"
+    "mongoose": "^4.2.5",
+    "mongoose-timestamp": "^0.4.0",
+    "mongoose-unique-validator": "^0.6.1"
   }
 }
