--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^0.8.5",
     "mongoose": "^4.2.5",
     "mongoose-timestamp": "^0.4.0",
-    "mongoose-unique-validator": "^0.6.1"
+    "mongoose-unique-validator": "^0.6.1",
+    "node-uuid": "^1.4.7"
   }
 }
