--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "ava ./tests/test-*.js",
+    "dev": "gulp",
     "postinstall": "gulp build"
   },
   "repository": {
@@ -22,7 +23,8 @@
     "babel-core": "^5.8.34",
     "babel-runtime": "^5.8.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0"
+    "gulp-babel": "^5.3.0",
+    "shelljs": "^0.5.3"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
