--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "devDependencies": {
     "ava": "^0.4.2",
     "babel-core": "^5.8.34",
+    "babel-eslint": "^4.1.5",
     "babel-runtime": "^5.8.2",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
+    "gulp-eslint": "^1.1.0",
     "shelljs": "^0.5.3"
   },
   "dependencies": {
